# abys

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml  docs.yml
docs/: Doxyfile  architecture.md  conf.py  development.md  index.rst
docs/api/: index.rst
docs/cli/: commands.rst  index.rst  repl.rst
include/abys/: frontend.h  version.h
include/abys/ir/: lowering_slang.h  tig.h  tig_builder.h
python/: README.md
scripts/: format_check.sh  run_clang_tidy.sh
src/: frontend_slang.cpp  main.cpp  version.cpp
src/ir/: tig_builder.cpp
tests/: smoke.cpp
tests/fixtures/: adder.sv  and_gate.sv
